# ivysyn

./: .gitignore  README.md  pytorch-conda-requirements.txt  pytorch-pip-requirements.txt  tensorflow-requirements.txt
results/CSVs/: pytorch_instrumentation.csv  tensorflow_instrumentation.csv
src/ivysyn/pytorch/: fuzzing.cpp  fuzzing.h  native_functions.yaml  native_functions_no_dups.yaml
src/ivysyn/pytorch/patches/: ATen.h.patch  common_utils.py.patch  gen_python_functions.py.patch
src/ivysyn/pytorch/scripts/: .gdb_history  get_fnames.py  get_kernels_to_tests.py  inject_fuzzing_code.py  prep_validation.py  reproducer.sh  run_kernel_tests.py  run_kernel_tests_validate.py  run_triggered_kernels.py  run_validation_and_synthesis.sh  synthesizer.py
src/ivysyn/scripts/: mount-result-dirs.sh  prep-ivysyn.sh  prep-pytorch-ivysyn.sh  prep-tensorflow-ivysyn.sh
src/ivysyn/tensorflow/: fuzzing.cc  fuzzing.h
src/ivysyn/tensorflow/inject-fuzzer/: .gitignore
src/ivysyn/tensorflow/inject-fuzzer/tools/: CMakeLists.txt  InjectValidateMain.cpp
src/ivysyn/tensorflow/patches/: bazelrc.patch  c_exported_symbols.lds.patch  jpeg_BUILD.bazel.patch  op_kernel.cc.patch  op_kernel.h.patch  tensorflow_BUILD.patch  tensorflow_core_framework_BUILD.patch  tensorflow_python_BUILD.patch  tf_exported_symbols.lds.patch  tf_version_script.lds.patch
src/ivysyn/tensorflow/scripts/: collect_registered_kernels.py  get_multiple_raw_ops.py  get_one_to_one_mappings.py  inject_fuzzing_code.sh  inject_gettypes_code.sh  inject_validate_code.sh  make_tests_deterministic.py  prep_validation.py  (+5 more)
(+375 files in other folders)
